fix(tech-icons): add padding on mobile

--- a/style.scss
+++ b/style.scss
@@ -486,7 +486,7 @@ main {
                                 -14px -14px 28px #0e181e;
 
                                 @media screen and (max-width: $mobile-screen-width) {
-                                    padding: 2px 6px;
+                                    padding: 2px 8px;
                                 }
                         }
 
